# HearthstoneResolver

./: .gitignore  CMakeLists.txt  README.md  build.php  cardify.php  exemple.json  main.cpp  package.json  project.puml
Core/: ACard.cpp  ACard.h  AMinion.cpp  AMinion.h  ASpell.cpp  ASpell.h  Playable.cpp  Playable.h
Emulator/Core/Entities/: ACard.cpp  ACard.h  ADamager.cpp  ADamager.h  ATargetable.cpp  ATargetable.h  HeroPower.cpp  HeroPower.h  Minion.cpp  Minion.h  Player.cpp  Player.h  Spell.cpp  Spell.h  Weapon.cpp  Weapon.h
Emulator/Core/Event/: AEntity.cpp  AEntity.h  EventHandler.cpp  EventHandler.h
Emulator/Core/Game/: Api.cpp  Api.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h
Emulator/Core/Type/: CardType.h  Class.h  EntityType.h  State.h  Target.h
Emulator/Core/Utility/: log.cpp  log.h
Emulator/test/: Minion1.cpp  Minion1.h  Weapon1.cpp  Weapon1.h
card/: M100.cpp  M100.h  M1003.cpp  M1003.h  M1006.cpp  M1006.h  M1008.cpp  M1008.h  M1009.cpp  M1009.h  M1014.cpp  M1014.h  M1016.cpp  M1016.h  M1019.cpp  M1019.h  M102.cpp  M102.h  M1022.cpp  M1022.h  M1029.cpp  M1029.h  M1035.cpp  M1035.h  M1037.cpp  M1037.h  M1063.cpp  M1063.h  M1068.cpp  M1068.h  M1073.cpp  M1073.h  M1077.cpp  M1077.h  M1078.cpp  M1078.h  M1080.cpp  M1080.h  M1086.cpp  M1086.h  (+2346 more)
template/: Minion.c  Minion.h
templates_c/: 497167f7675e41372cee2828f32c654fe40ed702_0.file.Minion.c.php  b2c5685985abfa596980cc8843143e89a6f67749_0.file.Minion.h.php
umlRender/: project.puml
